--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -9,12 +9,12 @@
 name: Java CI with Maven
 
 on:
+  workflow_dispatch:
   pull_request:
     branches: [ "main" ]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
