--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,5 +1,5 @@
 # --------------------------------------------------------
-# JPA ??
+# JPA를 H2 인메모리 데이터베이스로 연결한다. 중지시 데이터는 삭제된다.
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:testdb
@@ -7,6 +7,5 @@ spring.datasource.username=sa
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.defer-datasource-initialization=true
 # --------------------------------------------------------
-# ??? ?? ??? ?? ????? ??
 spring.devtools.livereload.enabled=true
 spring.freemarker.cache=false
