--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -4,6 +4,8 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/test_db
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.id.new_generator_mappings=true
+spring.jpa.hibernate.use-new-id-generator-mappings=true
 # --------------------------------------------------------
 spring.devtools.livereload.enabled=true
 spring.freemarker.cache=false
