update : application.properties 환경별 swagger 설정

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -4,6 +4,15 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/test_db
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
 # --------------------------------------------------------
 spring.devtools.livereload.enabled=true
 spring.freemarker.cache=false
+
+# --------------------------------------------------------
+# springdoc 설정
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.tagsSorter: alpha
+springdoc.swagger-ui.operations-sorter: alpha
+springdoc.swagger-ui.display-request-duration=true
