--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -6,6 +6,15 @@ spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.defer-datasource-initialization=true
+
 # --------------------------------------------------------
 spring.devtools.livereload.enabled=true
 spring.freemarker.cache=false
+
+# --------------------------------------------------------
+# springdoc 설정
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.tagsSorter: alpha
+springdoc.swagger-ui.operations-sorter: alpha
+springdoc.swagger-ui.display-request-duration=true
