--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -4,6 +4,12 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/test_db
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
 # --------------------------------------------------------
 spring.devtools.livereload.enabled=true
 spring.freemarker.cache=false
+
+# --------------------------------------------------------
+# springdoc 설정
+springdoc.api-docs.enabled=false
+springdoc.swagger-ui.enabled=false
