--- a/pom.xml
+++ b/pom.xml
@@ -102,10 +102,15 @@
         </dependency>
         -->
         <!-- spring doc -->
-        <dependency>
+        <!--<dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
             <version>2.7.0</version>
+        </dependency>-->
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>1.8.0</version>
         </dependency>
         <!-- srping doc -->
     </dependencies>
