--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -20,3 +20,15 @@ spring:
             enabled: true
     freemarker:
         cache: false
+
+# --------------------------------------------------------
+# springdoc 설정
+springdoc:
+    packages-to-scan: com.karrot.domain
+    default-consumes-media-type: application/json;charset=UTF-8
+    default-produces-media-type: application/json;charset=UTF-8
+    swagger-ui:
+        path: /swagger
+        disable-swagger-default-url: true
+        display-request-duration: true
+        operations-sorter: alpha
