--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -10,8 +10,18 @@ name: Java CI with Maven
 
 on:
   workflow_dispatch:
+  push:
+    branches:
+      - 'feature/*'
+      - 'feat/*'
+    paths-ignore:
+      - 'README.md'
+      - '.github/**'
+      - 'docker/**'
+      - '.*'
   pull_request:
-    branches: [ "main" ]
+    branches:
+      - "main"
 
 jobs:
   build:
@@ -19,11 +29,13 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+
     - name: Set up JDK 8
       uses: actions/setup-java@v3
       with:
         java-version: '8'
         distribution: 'temurin'
         cache: maven
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
+
+    - name : Run unit tests
+      run: mvn -B test
