update : github action 트리거 수정

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,7 +16,7 @@ on:
       - 'feat/*'
     paths-ignore:
       - 'README.md'
-      - '.github/**'
+      #- '.github/**'
       - 'docker/**'
       - '.*'
   pull_request:
