update : 깃헙 액션 수정

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -42,7 +42,7 @@ jobs:
           ${{ runner.os }}-maven-
 
     - name : Install Dependencies only
-      run: mvn -B -DskipTests=true
+      run: mvn -B install -DskipTests=true
 
     - name : Run unit tests
       run: mvn -B test
