[OpenAPI] 사용자 저장, 조회, 수정, 삭제 API (#11)
* 주요사항
  * Controller CRUD 메서드 OpenAPI, 단위테스트 작성
  * OpenAPI http 상태코드 지원을 위해 springdoc으로 전환 
  * JUnit5로 전환하되 vintage engine으로 기존 코드 유지
* 관련사항
  * Controller, Service, Repository 기본 레이어 설정
  * Users, Products, Transactions 더미 객체 설정
  * OpenAPI 룰셋 spectral 로컬 검사 방법 추가
  * 깃헙 액션 Maven 빌드, 단위테스트 추가

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -4,6 +4,10 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/test_db
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
 # --------------------------------------------------------
 spring.devtools.livereload.enabled=true
 spring.freemarker.cache=false
+
+# --------------------------------------------------------
+# springdoc 설정
