--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -11,7 +11,13 @@ name: Java CI with Maven
 on:
   workflow_dispatch:
   pull_request:
-    branches: [ "main" ]
+    branches:
+      - "main"
+    paths-ignore:
+      - 'README.md'
+      #- '.github/**'
+      - 'docker/**'
+      - '.*'
 
 jobs:
   build:
@@ -19,11 +25,25 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up JDK 8
+
+    - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
-        java-version: '8'
+        java-version: '17'
         distribution: 'temurin'
         cache: maven
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
+
+    - name: Cache Maven dependencies
+      uses: actions/cache@v3
+      with:
+        path: ~/.m2/repository
+        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+        restore-keys: |
+          ${{ runner.os }}-maven-
+
+    # TODO: mvn lifecycle에 맞춰 배포 단계, spectral 검증 단계 추가
+    - name : Install Dependencies only
+      run: mvn -B install -DskipTests=true
+
+    - name : Run unit tests
+      run: mvn -B test
