--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -32,3 +32,4 @@ springdoc:
         disable-swagger-default-url: true
         display-request-duration: true
         operations-sorter: alpha
+        tags-sorter: alpha
